--- a/primer.html
+++ b/primer.html
@@ -1,41 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Пример</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<link rel="stylesheet" href="primer.css">
 <body>
-
-  <div class="container" id="container"></div>
-
-<script>
-// Создаем двумерный массив
-let matrix = [];
-for (let i = 0; i < 5; i++) {
-  matrix[i] = [];
-}
-
-// Заполняем массив числами по порядку
-let num = 1;
-for (let i = 0; i < 5; i++) {
-  for (let j = 0; j < 5; j++) {
-    matrix[i][j] = num;
-    num++;
-  }
-}
-
-// Создаем поле из дивов и заполняем их числами из двумерного массива
-let container = document.getElementById('container'); // заменить 'container' на id вашего контейнера
-for (let i = 0; i < 5; i++) {
-  for (let j = 0; j < 5; j++) {
-    let div = document.createElement('div');
-    div.innerText = matrix[i][j];
-    container.appendChild(div);
-  }
-}
-
-  
-</script>
+    <div class="container">
+        <div class="item item1">1</div>
+        <div class="item item2">2</div>
+    </div>
 </body>
 </html>
